[gd_scene load_steps=12 format=3 uid="uid://v2x7jv2oywdq"]

[ext_resource type="Script" path="res://views/menu.gd" id="1_myuae"]
[ext_resource type="FontFile" uid="uid://brnqbntbxrjle" path="res://assets/UI/RifficFree-Bold.ttf" id="1_w0r5y"]
[ext_resource type="Texture2D" uid="uid://bvu7430d062x" path="res://assets/characters/pixel-background-fox.jpeg" id="2_ncw0y"]
[ext_resource type="AudioStream" uid="uid://cml74xehstk48" path="res://assets/audio/music-startscreen.mp3" id="4_dqw2l"]
[ext_resource type="AudioStream" uid="uid://ss5l1hahgact" path="res://assets/audio/button-click.mp3" id="5_0hd57"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_eln5l"]
grow_begin = 0.0
grow_end = 0.0
thickness = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kncy1"]
bg_color = Color(0.462745, 0.858824, 0.988235, 1)
border_width_bottom = 3
border_color = Color(0.0235294, 0.270588, 0.439216, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_offset = Vector2(1, 1)
anti_aliasing_size = 0.936

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2f6o"]
bg_color = Color(0.211765, 0.796078, 0.960784, 1)
border_width_bottom = 3
border_color = Color(0.0235294, 0.270588, 0.439216, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_offset = Vector2(1, 1)
anti_aliasing_size = 0.936

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vstxs"]
bg_color = Color(0.211765, 0.796078, 0.960784, 1)
border_width_bottom = 3
border_color = Color(0.0235294, 0.270588, 0.439216, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_offset = Vector2(1, 1)
anti_aliasing_size = 0.936

[sub_resource type="Theme" id="Theme_0kl1q"]
default_font = ExtResource("1_w0r5y")
Button/styles/focus = SubResource("StyleBoxLine_eln5l")
Button/styles/hover = SubResource("StyleBoxFlat_kncy1")
Button/styles/normal = SubResource("StyleBoxFlat_x2f6o")
Button/styles/pressed = SubResource("StyleBoxFlat_vstxs")

[sub_resource type="SystemFont" id="SystemFont_8tg3q"]
font_names = PackedStringArray("Rockwell")
font_weight = 375
font_stretch = 75
msdf_size = 30

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0kl1q")
script = ExtResource("1_myuae")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ncw0y")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="gameTitle" type="Label" parent="MarginContainer/VBoxContainer" groups=["translatable"]]
custom_minimum_size = Vector2(20, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 15
theme_override_constants/line_spacing = 0
theme_override_fonts/font = SubResource("SystemFont_8tg3q")
theme_override_font_sizes/font_size = 30
text = "Foxy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer" groups=["translatable"]]
custom_minimum_size = Vector2(70, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("1_w0r5y")
text = "Play"

[node name="Tutorial" type="Button" parent="MarginContainer/VBoxContainer" groups=["translatable"]]
custom_minimum_size = Vector2(70, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_w0r5y")
text = "Tutorial"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer" groups=["translatable"]]
custom_minimum_size = Vector2(70, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(0.223529, 0.223529, 0.223529, 0.380392)
theme_override_fonts/font = ExtResource("1_w0r5y")
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer" groups=["translatable"]]
custom_minimum_size = Vector2(70, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_w0r5y")
text = "Quit"

[node name="startscreenMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dqw2l")
volume_db = -28.576
autoplay = true

[node name="buttonClick" type="AudioStreamPlayer" parent="."]
process_priority = 1
stream = ExtResource("5_0hd57")
volume_db = -22.955
pitch_scale = 1.29

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
